# kube-dump

./: Cargo.toml
.github/workflows/: build.yml
src/: discover.rs  ext.rs  generic.rs  kubectl.rs  layout.rs  main.rs
