# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "kube-dump"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
kube = "0.35.1"
k8s-openapi = { version = "0.8.0", features = ["v1_16"], default-features = false }
tokio = { version = "0.2.21", features = ["macros", "fs"] }
anyhow = "1.0.31"
http = "0.2.1"
serde_json = "1.0.55"
serde = "1.0.114"

[package.metadata.wharf.builder]
image = "rust"
setup-commands = [
    { shell = "apt-get update && apt-get install -y libssl-dev" }
]

[package.metadata.wharf.output]
image = "debian:stable-slim"
entrypoint = ["/kube-dump"]
volumes = ["/kube"]
env = { KUBECONFIG = "/kube/config" }
pre-install-commands = [
    { shell = "apt-get update && apt-get install -y libssl-dev" }
]

[[package.metadata.wharf.binary]]
name = "kube-dump"
destination = "/kube-dump"