# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "kube-dump"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
kube =  { git = "https://github.com/mikailbag/kube-rs", branch = "all" }
k8s-openapi = { version = "0.11.0", features = ["v1_19"], default-features = false }
tokio = { version = "1.5.0", features = ["rt-multi-thread","macros", "fs", "process", "sync"] }
anyhow = "1.0.40"
http = "0.2.4"
serde_json = "1.0.64"
serde = "1.0.125"
async-trait = "0.1.50"

[package.metadata.wharf.builder]
image = "rust"
setup-commands = [
    { shell = "apt-get update && apt-get install -y libssl-dev" }
]

[package.metadata.wharf.output]
image = "debian:stable-slim"
entrypoint = ["/kube-dump"]
volumes = ["/kube"]
env = { KUBECONFIG = "/kube/config" }
pre-install-commands = [
    { shell = "apt-get update && apt-get install -y libssl-dev" }
]

[[package.metadata.wharf.binary]]
name = "kube-dump"
destination = "/kube-dump"
